# bmi-odcl

./: README.md
Avalanche-Implementation-CL/: README.md  config_avalanche.json  config_avalanche_4classes.json
BMI-TOR/: README.md  doemain.py  main.py  setup.py
BMI-TOR/docs/: conf.py
BMI-TOR/manager/assistants/: __init__.py  data.py  training.py
BMI-TOR/manager/doeflows/: archive.py
BMI-TOR/manager/flows/: __init__.py  configure.py  quantize.py  test_multi.py  test_multi_select_TOR_long_chain_check_all_test_acc.py  train_ER_on_request_withPretrained_prev_sessions_long_chain_test_acc.py  train_LwF_on_request_withPretrained_prev_sessions_long_chain_test_acc.py  train_TL_on_request_withPretrained_prev_sessions_long_chain_test_acc.py
BMI-TOR/manager/meter/: __init__.py  meter.py  writerstub.py
BMI-TOR/manager/meter/statistics/: learningratestatistic.py  lossstatistic.py  profilingstatistic.py  statistics.py  taskstatistic.py  visionstatistics.py
BMI-TOR/manager/platform/: __init__.py
BMI-TOR/systems/BCI_Drone_4classes/MIBMINet/: __init__.py  config.json  config_LwF.json  mibminet.py
BMI-TOR/systems/BCI_Drone_4classes/MIBMINet/postprocess/: taskstatistic.py
BMI-TOR/systems/BCI_Drone_4classes/MIBMINet/quantize/: __init__.py
BMI-TOR/systems/utils/: __init__.py
BMI-TOR/systems/utils/data/: __init__.py  cvsplit.py
BMI-TOR/systems/utils/loss/: LwFLoss.py
BMI-TOR/systems/utils/lrscheduler/: __init__.py  handscheduler.py
Offline-Training/: .gitignore  README.md  Within-Session-Analysis.ipynb  script_run_network_withGenerate.sh
Offline-Training/dory/: Parser_ONNX_to_DORY.py
Offline-Training/quantlab-cl/: main.py  read_binary_data.py  setup.py
Offline-Training/quantlab-cl/configure/: storage_cfg.json
Offline-Training/quantlab-cl/examples/fx_integerization/: README.md  integerize_pactnets.py
Offline-Training/quantlab-cl/manager/: __init__.py
Offline-Training/quantlab-cl/manager/assistants/: data.py  library.py  meter.py  network.py
Offline-Training/quantlab-cl/manager/flows/: delete.py  platform.py  pytorchtools.py  test.py  train.py  train_ER.py  train_LwF.py  train_TL.py
Offline-Training/quantlab-cl/manager/logbook/: __init__.py  logbook.py  logsmanager.py
Offline-Training/quantlab-cl/manager/platform/: platformmanager.py
Offline-Training/quantlab-cl/quantlib/: README.md  __init__.py  setup.py
Offline-Training/quantlab-cl/quantlib/algorithms/: __init__.py  controller.py
Offline-Training/quantlab-cl/quantlib/backends/: __init__.py
Offline-Training/quantlab-cl/quantlib/editing/: __init__.py
On-Device-Implementation/: .gitignore  CMakeLists.txt  README.md  cmake_script_run_net.sh  main.c  main_LwF.c  sdk.config
On-Device-Implementation/Backbone-Example/: model.onnx
On-Device-Implementation/Backbone-Example/hex/: BNReluConvolution0_weights.hex  BNReluConvolution1_weights.hex  BNReluConvolution3_weights.hex  BNReluConvolution4_weights.hex  FullyConnected6_weights.hex  inputs_0.hex  inputs_1.hex  inputs_10.hex  inputs_11.hex  inputs_12.hex  inputs_13.hex  inputs_14.hex  inputs_15.hex  inputs_16.hex  inputs_17.hex  inputs_18.hex  inputs_19.hex  inputs_2.hex  inputs_20.hex  inputs_21.hex  inputs_22.hex  inputs_23.hex  inputs_24.hex  inputs_25.hex  inputs_26.hex  inputs_27.hex  inputs_28.hex  inputs_29.hex  inputs_3.hex  inputs_30.hex  inputs_31.hex  inputs_32.hex  inputs_33.hex  inputs_34.hex  inputs_35.hex  inputs_36.hex  inputs_37.hex  inputs_38.hex  inputs_39.hex  inputs_4.hex  (+65 more)
On-Device-Implementation/Backbone-Example/inc/: BNReluConvolution0.h  BNReluConvolution1.h  BNReluConvolution3.h  BNReluConvolution4.h  FullyConnected6.h  Pooling2.h  Pooling5.h  dory_dma.h  dory_get_tile.h  double_buffer.h  layer.h  mchan.h  mem.h  net_utils.h  network.h  tile_index.h
On-Device-Implementation/Backbone-Example/src/: BNReluConvolution0.c  BNReluConvolution1.c  BNReluConvolution3.c  BNReluConvolution4.c  FullyConnected6.c  Pooling2.c  Pooling5.c  dory_dma.c  main.c  mem.c  net_utils.c  network.c
On-Device-Implementation/Classifier-Example/: .gitignore  linear-data.h  net.c  net.h  step-check.h
On-Device-Implementation/Classifier-Example-LwF/: net.c  pulp_losses_fp32.c  pulp_losses_fp32.h  stats.h
On-Device-Implementation/Classifier-Example-LwF/utils/: GM_multi_inputs_LwF.py  dump_utils.py  weights_fc.npy
On-Device-Implementation/Classifier-Example-LwF/utils/inputs/: inputs_fc_12.npy  inputs_fc_13.npy  inputs_fc_14.npy  inputs_fc_17.npy  inputs_fc_19.npy  inputs_fc_20.npy  inputs_fc_22.npy  inputs_fc_23.npy  inputs_fc_24.npy  inputs_fc_27.npy  inputs_fc_28.npy  inputs_fc_3.npy  inputs_fc_31.npy  inputs_fc_32.npy  inputs_fc_35.npy  inputs_fc_37.npy  inputs_fc_38.npy  inputs_fc_4.npy  inputs_fc_41.npy  inputs_fc_43.npy  inputs_fc_45.npy  inputs_fc_46.npy  inputs_fc_48.npy  inputs_fc_49.npy  inputs_fc_5.npy  inputs_fc_50.npy  inputs_fc_51.npy  inputs_fc_52.npy  inputs_fc_55.npy  inputs_fc_56.npy  inputs_fc_58.npy  inputs_fc_59.npy  inputs_fc_60.npy  inputs_fc_63.npy  inputs_fc_64.npy  inputs_fc_65.npy  inputs_fc_67.npy  inputs_fc_69.npy  inputs_fc_72.npy  inputs_fc_73.npy  (+15 more)
On-Device-Implementation/Classifier-Example/utils/: GM_multi_inputs.py  bias_fc.npy  dump_utils.py
On-Device-Implementation/Classifier-Example/utils/inputs/: inputs_fc_0.npy  inputs_fc_1.npy  inputs_fc_10.npy  inputs_fc_11.npy  inputs_fc_15.npy  inputs_fc_16.npy  inputs_fc_18.npy  inputs_fc_2.npy  inputs_fc_21.npy  inputs_fc_25.npy  inputs_fc_26.npy  inputs_fc_29.npy  inputs_fc_30.npy  inputs_fc_33.npy  inputs_fc_34.npy  inputs_fc_36.npy  inputs_fc_39.npy  inputs_fc_40.npy  inputs_fc_42.npy  inputs_fc_44.npy  inputs_fc_47.npy  inputs_fc_53.npy  inputs_fc_54.npy  inputs_fc_57.npy  inputs_fc_6.npy  inputs_fc_61.npy  inputs_fc_62.npy  inputs_fc_66.npy  inputs_fc_68.npy  inputs_fc_7.npy  inputs_fc_70.npy  inputs_fc_71.npy  inputs_fc_74.npy  inputs_fc_76.npy  inputs_fc_77.npy  inputs_fc_78.npy  inputs_fc_79.npy  inputs_fc_8.npy  inputs_fc_80.npy  inputs_fc_84.npy  (+6 more)
Preprocessing/: convert_data_biowolf_GUI_2c.m  run_conversion.m
(+79 files in other folders)
